# modelrisk-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  modelrisk_mcp.spec  pyproject.toml  server.json
.github/workflows/: ci.yml  integration.yml  release.yml
docs/: architecture.md  authoring-audit-rules.md  chart-style-guide.md  claude-code.md  claude-desktop.md  claude-for-excel.md  com-surface.md  community-submission.md  demo-script.md  distribution-selection.md  glossary.md  installation.md  knowledge-base.md  launch-video.md  methodology.md  modeling-patterns.md  mrservice-spike.md  quick-start.md  scenarios.md  user-manual.md
packaging/: manifest.json
scripts/: build_mcpb.py  encode_activation_key.py  extract_catalogue.py  scan_exe_for_key.py  spike_com_surface.py  spike_mrservice.py
src/modelrisk_mcp/: __init__.py  __main__.py  config.py  errors.py  http_auth.py  install.py  safety.py  server.py
src/modelrisk_mcp/audit/: engine.py  rules.py
src/modelrisk_mcp/bridge/: _keymat.py  catalogue.py  charts.py  excel.py  formulas.py  modelrisk.py  mrservice.py  name_parser.py  progids.py  reports.py  results.py  simulation.py  vba_helper.py
src/modelrisk_mcp/data/: audit_rules.yaml  distributions.yaml  functions.json  knowledge_base.md  optional_overrides.yaml
src/modelrisk_mcp/prompts/: __init__.py  add_uncertainty.py  audit_model.py  build_model.py  import_legacy_model.py  interpret_results.py
src/modelrisk_mcp/resources/: __init__.py  audit_rules.py  distribution_guide.py  function_reference.py  knowledge_base.py  methodology.py  workbook_state.py
src/modelrisk_mcp/schemas/: __init__.py  analysis.py  distributions.py  results.py  workbook.py
src/modelrisk_mcp/tools/: __init__.py  analysis.py  building.py  reading.py  restore.py  simulation.py  workflows.py
tests/integration/: conftest.py  test_analysis.py  test_building.py  test_e2e_run_simulation.py  test_excel_bridge_smoke.py  test_modelrisk_smoke.py  test_reading.py  test_simulation.py
tests/unit/: test_addin_activation.py  test_addin_loader.py  test_audit_rules_new.py  test_auto_launch.py  test_catalogue.py  test_catalogue_loader.py  test_charts.py  test_cli.py  test_excel_bridge.py  test_formulas.py  test_http_auth.py  test_install.py  test_methodology_crossref.py  test_modelrisk_mocked.py  test_mrservice.py  test_name_parser.py  test_open_workbook.py  test_prompts.py  test_report_binning.py  test_reports.py  test_resources.py  test_safety.py  test_schemas.py  test_server_boot.py  test_simulation_controller.py  test_tools_analysis_mocked.py  test_tools_building_mocked.py  test_tools_reading_mocked.py  test_tools_restore_mocked.py  test_tools_simulation_mocked.py  test_tools_workflows_mocked.py  test_vba_helper.py
