[project]
name = "modelrisk-mcp"
version = "0.1.0a2"
description = "Open MCP server bridging Anthropic Claude (and any MCP-compatible client) with the ModelRisk Excel add-in."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vose Software", email = "info@vosesoftware.com" },
]
keywords = ["mcp", "modelrisk", "monte-carlo", "excel", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "xlwings>=0.31; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[project.scripts]
modelrisk-mcp = "modelrisk_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/vosesoftware/modelrisk-mcp"
Repository = "https://github.com/vosesoftware/modelrisk-mcp"
Issues = "https://github.com/vosesoftware/modelrisk-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelrisk_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "xlwings.*",
    "win32com.*",
    "win32api.*",
    "win32event.*",
    "pywintypes.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
