[project]
name = "modelrisk-mcp"
version = "0.3.0a15"
description = "Open MCP server bridging Anthropic Claude (and any MCP-compatible client) with the ModelRisk Excel add-in."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Vose Software", email = "info@vosesoftware.com" },
]
maintainers = [
    { name = "Vose Software", email = "info@vosesoftware.com" },
]
keywords = [
    "mcp", "modelrisk", "monte-carlo", "excel", "anthropic", "claude",
    "risk-analysis", "simulation", "probability", "vose",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "xlwings>=0.31; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[project.scripts]
modelrisk-mcp = "modelrisk_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/vosesoftware/modelrisk-mcp"
Repository = "https://github.com/vosesoftware/modelrisk-mcp"
Issues = "https://github.com/vosesoftware/modelrisk-mcp/issues"
Changelog = "https://github.com/vosesoftware/modelrisk-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/vosesoftware/modelrisk-mcp/tree/main/docs"
"Vose Software" = "https://www.vosesoftware.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modelrisk_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/modelrisk_mcp/data/functions.json" = "modelrisk_mcp/data/functions.json"
"src/modelrisk_mcp/data/optional_overrides.yaml" = "modelrisk_mcp/data/optional_overrides.yaml"
"src/modelrisk_mcp/data/audit_rules.yaml" = "modelrisk_mcp/data/audit_rules.yaml"
"src/modelrisk_mcp/data/distributions.yaml" = "modelrisk_mcp/data/distributions.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "src/modelrisk_mcp",
    "tests",
    "scripts",
    "docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
    "uv.lock",
    "modelrisk_mcp.spec",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "xlwings.*",
    "win32com.*",
    "win32api.*",
    "win32event.*",
    "pythoncom.*",
    "pywintypes.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
